--- a/style.css
+++ b/style.css
@@ -11,9 +11,11 @@
 }
 
 body {
-  position: relative; /* Pseudo elementin konumlanabilmesi için */
+  position: relative;
   height: 100vh;
-  background-color: cadetblue;
+  background-color: rgb(82, 165, 168);
+  font-family: "GT Super WT", "Segoe UI", "Roboto", "Arial", "Helvetica Neue",
+    "Lucida Grande", sans-serif;
 }
 
 body::after {
@@ -27,15 +29,9 @@ body::after {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  opacity: 0.5;
+  opacity: 0.35;
   z-index: -1;
 }
-
-/* header {
-  display: flex;
-  justify-content: space-between;
-  padding: 25px;
-} */
 
 nav {
   height: 6rem;
@@ -50,11 +46,10 @@ nav {
   display: flex;
   justify-content: space-between;
 }
+
 .icon {
   color: #fff;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.8), 0 0 20px rgba(0, 0, 0, 0.6);
-  /* background: transparent; */
-  font-size: 3rem;
 }
 
 .nav-menu {
@@ -62,12 +57,10 @@ nav {
   align-items: center;
   gap: 2rem;
 }
+
 .nav-menu-1 {
-  /* padding: 0.8rem 1.2rem; */
-  /* padding: 14px  14px 24px; */
   border-radius: 0.8rem;
   background-color: #ffff;
-  border: gray;
   gap: 0.85rem;
 }
 
@@ -78,9 +71,11 @@ nav {
   cursor: pointer;
   padding: 14px 0 14px 24px;
 }
+
 .nav-menu-1 p:nth-last-of-type(1) {
   padding: 14px 24px;
 }
+
 .nav-menu-1 p:hover {
   color: #353535;
   opacity: 0.7;
@@ -96,12 +91,13 @@ nav {
 
 section {
   display: grid;
-  grid-template-columns: 2fr 4fr 1fr;
-  margin: 0 auto;
+  grid-template-columns: 1fr 2fr;
+  gap: 2rem;
+  padding: 2rem;
   width: var(--fluid-width);
   max-width: 100rem;
-  height: 80%;
 }
+
 .section-left-wrapper {
   display: flex;
   align-items: center;
@@ -136,11 +132,11 @@ section {
 
 .section-left-text-1 {
   margin: 2rem 0 2rem 0;
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 .section-left-text-2 {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   color: #0f0f0f;
 }
 .section-left-text-2 a {
@@ -151,14 +147,119 @@ section {
   width: 100%;
   margin: 2rem 0 0.75rem 0;
   padding: 15px 20px;
-  background-color: #004bff;
+  background-color: #5268ff;
   color: #f1f1f1;
   border-radius: 0.8rem;
   border: none;
   font-size: 1.2rem;
 }
 
-.section-right-container h1{
-color: #f1f1f1;
-font-size: 2rem;
+.section-right-wrapper {
+  height: 80vh;
+  overflow-y: auto; /* Dikey kaydırma aktif */
+  scrollbar-width: none;
+}
+.section-right-wrapper::-webkit-scrollbar {
+  display: none; /* Webkit tarayıcılar (Chrome, Safari) için kaydırma çubuğunu gizle */
+}
+.section-right-container h1 {
+  color: #f1f1f1;
+  font-size: 1.5rem;
+}
+.section-right-text-1 {
+  width: 80%;
+  color: #f1f1f1;
+  font-size: 4rem;
+}
+.right-text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 1rem 0 1rem 0;
+}
+
+.right-text-container > p {
+  color: #f1f1f1ea;
+  font-size: 1rem;
+  font-weight: 600;
+  width: 80%;
+}
+
+.right-button-container {
+  display: flex;
+  gap: 1rem;
+}
+.button-1 {
+  background-color: #5268ff;
+  color: #f1f1f1;
+  padding: 15px 20px;
+  border-radius: 0.6rem;
+  font-weight: 500;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s all;
+}
+.button-1:hover {
+  background-color: #3741d9;
+}
+
+.button-2 {
+  background: transparent;
+  border: 1px solid #f1f1f1;
+  border-radius: 0.6rem;
+  color: #f1f1f1;
+  padding: 15px 20px;
+  font-weight: 500;
+  font-size: 1rem;
+  transition: 0.3s all;
+  cursor: pointer;
+}
+
+.button-2:hover {
+  background-color: #3741d9;
+  border: 1px solid #3741d9;
+}
+
+.button-3 {
+  background: transparent;
+  color: #f1f1f1;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+  text-decoration: underline;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown span {
+  color: #353535;
+  font-weight: 600;
+  transition: color 0.3s, opacity 0.3s;
+  cursor: pointer;
+  padding: 14px 0 14px 24px;
+}
+
+.dropdown span:hover {
+  color: #353535;
+  opacity: 0.7;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+  border-radius: 0.8rem;
+  margin-top: 1.3rem;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
