editing mobile design

--- a/style.css
+++ b/style.css
@@ -366,7 +366,7 @@ section {
   }
 
   #nav-mobile {
-    background-color: #f1f1f1;
+    background-color: #ffff;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -374,15 +374,19 @@ section {
   }
 
   .mobile-nav-menu {
-    background-color: #f1f1f1;
+    background-color: #ffff;
+    width: var(--fluid-width);
     min-width: 20rem;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 6px 10px;
+    padding: 12px 18px;
     z-index: 1;
     border-radius: 0.8rem;
     margin-top: 1.3rem;
     z-index: 1;
     transition: all 0.3s;
+    max-height: 80vh;
+overflow-y: auto;
+
   }
 
   .mobile-nav-menu-items {
@@ -390,14 +394,38 @@ section {
     justify-content: space-between;
     align-items: center;
     z-index: 1;
+    font-size: 0.875rem;
+    color: #353535;
+    transition: 0.3s all;
+   
   }
+
+.mobile-menu-content{
+padding: 10px 12px;
+}
 
   .mobile-nav-menu-lists {
     display: none;
+    
   }
 
   .mobile-nav-menu-area.active .mobile-nav-menu-lists {
     display: block;
+
+  }
+
+
+  .mobile-nav-menu-lists li {
+    font-size: 0.875rem;
+    padding: 10px 0px;
+  }
+    .mobile-nav-menu-lists li a:hover {
+    color: #353535;
+    opacity: 0.7;
+  }
+    .mobile-nav-menu-lists li h5{
+    font-size: 0.875rem;
+    color:#5268ff;
   }
 
   .icon {
