--- a/style.css
+++ b/style.css
@@ -3,11 +3,82 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  font-size: 100%;
+}
 
 :root {
+  /* Widths */
   --max-width: 1120px;
-  --fixed-width: 600px;
-  --fluid-width: 90vw;
+  --width-fixed: 600px;
+  --width-fluid: 90vw;
+
+  /* Colors */
+  --color-white: #fff;
+  --color-white-100: #f1f1f1;
+  --color-white-200: #f1f1f1ea;
+  --color-white-300:#e3dbdb;
+
+  --color-black: #111;
+  --color-black-100: #353535;
+
+  /* Shadows */
+  --shadow-light: #00000033;
+  --shadow-medium: #00000099;
+  --shadow-dark: #000000cc;
+
+  /* Accent Colors */
+  --color-aqua: #52a5a8;
+  --color-blue: #5268ff;
+  --color-blue-100:#3741d9;
+
+  /* Font Weights */
+  --font-weight-medium: 500;
+  --font-weight-semibold: 600;
+
+  /* Font Sizes */
+  --font-size-xs: 0.75rem;
+  --font-size-small: 0.875rem;
+  --font-size-medium:1rem;
+  --font-size-medium-wide:1.5rem;
+  --font-size-large:1.8rem;
+  --font-size-xlarge:4rem;
+  
+  /* --font-size-xxs: 0.75rem;      
+  --font-size-xs: 0.875rem;      
+  --font-size-sm: 1rem;          
+  --font-size-md: 1.5rem;     
+  --font-size-lg: 1.8rem;  */
+
+  /* Border Radius */
+  --border-radius-xs:0.4rem;
+  --border-radius-small: 0.8rem;
+
+  /* Transitions */
+  --transition-fast: 0.3s all;
+  --transition-color-opacity: color 0.3s, opacity 0.3s;
+
+  /* Spacing (Gaps) */
+  --spacing-xs: 0.85rem;
+  --spacing-sm: 1rem;
+  --spacing-lg: 2rem;
+
+  /* Opacities */
+  --opacity-high: 0.85;
+  --opacity-medium: 0.7;
+  --opacity-low: 0.35;
+
+  /* Paddings */
+  --padding-small: 6px 12px;
+  --padding-medium: 8px 10px;
+  --padding-medium-wide: 8px 16px;
+  --padding-regular: 10px 0px;
+  --padding-regular-horizontal: 10px 12px;
+  --padding-regular-medium: 10px 15px;
+  --padding-regular-large: 12px 18px;
+  --padding-large-horizontal: 14px 24px;
+  --padding-large-left: 14px 0 14px 24px;
+  --padding-extra-large: 15px 20px;
 }
 
 a {
@@ -22,7 +93,7 @@ ul {
 body {
   position: relative;
   height: 100%;
-  background-color: rgb(82, 165, 168);
+  background-color: var(--color-aqua);
   font-family: "GT Super WT", "Segoe UI", "Roboto", "Arial", "Helvetica Neue",
     "Lucida Grande", sans-serif;
   overflow: auto;
@@ -39,7 +110,7 @@ body::after {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  opacity: 0.35;
+  opacity: var(--opacity-low);
   z-index: -1;
 }
 
@@ -62,35 +133,35 @@ body::after {
 }
 
 .icon {
-  color: #fff;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.8), 0 0 20px rgba(0, 0, 0, 0.6);
+  color: var(--color-white);
+  text-shadow: 0 0 10px var(--shadow-dark), 0 0 20px var(--shadow-medium);
 }
 
 .nav-desktop-menu {
   display: flex;
   align-items: center;
-  gap: 0.85rem;
+  gap: var(--spacing-xs);
 }
 
 .nav-desktop-menu-1 {
-  border-radius: 0.8rem;
-  background-color: #ffff;
-  gap: 0.85rem;
+  border-radius: var(--border-radius-small);
+  background-color: #fff;
+  gap: var(--spacing-xs);
 }
 
 .nav-desktop-menu-1 p {
   padding: 14px 0 14px 24px;
-  font-size: 0.875rem;
+  font-size: var(--font-size-small);
 }
 
 .nav-desktop-menu-1 .dropdown:nth-last-of-type(1) {
-  padding: 14px 24px;
+  padding: var(--padding-large-horizontal);
   display: none;
 }
 
 #sources {
   display: block;
-  padding: 14px 24px;
+  padding: var(--padding-large-horizontal);
 }
 
 .dropdown,
@@ -100,17 +171,17 @@ body::after {
 }
 
 .dropdown span {
-  color: #353535;
-  font-weight: 600;
-  transition: color 0.3s, opacity 0.3s;
+  color: var(--color-black-100);
+  font-weight: var(--font-weight-semibold);
+  transition: var(--transition-color-opacity);
   cursor: pointer;
-  padding: 14px 0 14px 24px;
-  font-size: 0.875rem;
+  padding: var(--padding-large-left);
+  font-size: var(--font-size-small);
 }
 
 .dropdown span:hover {
-  color: #353535;
-  opacity: 0.7;
+  color: var(--color-black-100);
+  opacity: var(--opacity-medium);
 }
 
 .dropdown-content,
@@ -128,31 +199,30 @@ body::after {
 }
 
 .dropdown-content .feature-lists {
-  list-style: none;
-  background-color: #ffff;
+  background-color: var(--color-white);
   min-width: 16rem;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 12px 16px;
+  box-shadow: 0px 8px 16px 0px var(--shadow-light);
+  padding: var(--padding-regular-large);
   z-index: 1;
-  border-radius: 0.8rem;
+  border-radius: var(--border-radius-small);
   margin-top: 1.3rem;
 }
 
 .feature-lists li {
-  padding: 8px 10px;
+  padding: var(--padding-medium);
 }
 
 .feature-lists li a {
-  color: #353535;
-  font-weight: 600;
+  color: var(--color-black-100);
+  font-weight: var(--font-weight-semibold);
   text-decoration: none;
-  transition: color 0.3s, opacity 0.3s;
-  font-size: 0.875rem;
+  transition: var(--transition-color-opacity);
+  font-size: var(--font-size-small);
 }
 
 .feature-lists li a:hover {
-  color: #353535;
-  opacity: 0.7;
+  color: var(--color-black-100);
+  opacity: var(--opacity-medium);
 }
 .source-lists {
   display: flex;
@@ -163,64 +233,64 @@ body::after {
   position: absolute;
 
   list-style: none;
-  background-color: #ffff;
+  background-color: var(--color-white);
   width: 30rem;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 12px 16px;
+  box-shadow: 0px 8px 16px 0px var(--shadow-light);
+  padding: var(--padding-regular-large);
   z-index: 1;
-  border-radius: 0.8rem;
+  border-radius: var(--border-radius-small);
   margin-top: 1.3rem;
 }
 
 .source-lists ul {
   list-style: none;
   width: 20rem;
-  border-right: 1px solid rgb(227, 219, 219);
-  padding: 8px 10px;
+  border-right: 1px solid var(--color-white-300);
+  padding: var(--padding-medium);
 }
 
 .source-lists ul:nth-last-of-type(1) {
   border: none;
 }
 .source-lists ul li {
-  padding: 8px 10px;
+  padding: var(--padding-medium);
 }
 
 .text-blue {
-  font-size: 0.875rem;
-  color: #5268ff;
+  font-size: var(--font-size-small);
+  color: var(--color-blue);
 }
 
 .source-lists ul li a {
-  color: #353535;
-  font-weight: 600;
+  color: var(--color-black-100);
+  font-weight: var(--font-weight-semibold);
   text-decoration: none;
-  transition: color 0.3s, opacity 0.3s;
-  font-size: 0.875rem;
+  transition: var(--transition-color-opacity);
+  font-size: var(--font-size-small);
 }
 
 .source-lists li a:hover {
-  color: #353535;
-  opacity: 0.7;
+  color: var(--color-black-100);
+  opacity: var(--opacity-medium);
 }
 
 .fa-chevron-down,
 .fa-chevron-up {
-  font-size: 0.75rem;
+  font-size: var(--font-size-xs);
 }
 
 #register {
-  color: #f1f1f1;
-  background-color: #353535;
+  color: var(--color-white-100);
+  background-color: var(--color-black-100);
   margin: 2px;
-  padding: 0.375rem 0.75rem;
-  border-radius: 0.4rem;
+  padding:var(--padding-small);
+  border-radius: var(--border-radius-xs);
 }
 
 section {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  gap: 2rem;
+  gap: var(--spacing-lg);
   padding: 2rem;
   width: var(--fluid-width);
   max-width: 100rem;
@@ -234,38 +304,36 @@ section {
 }
 
 #section-left {
-  background-color: #f1f1f1;
-  border-radius: 0.8rem;
-  opacity: 0.85;
+  background-color: var(--color-white-100);
+  border-radius: var(--border-radius-small);
+  opacity: var(--opacity-high);
   width: 18rem;
 }
 
 .section-left-container {
-  padding: 12px 18px;
+  padding: var(--padding-regular-large);
 }
 
 .icon-container {
-  background: black;
+  background: var(--color-black);
   width: 50px;
   height: 50px;
-
   border-radius: 1.12rem;
-  /* padding: 10px;  */
   display: inline-flex;
   align-items: center;
   justify-content: center;
 }
 .icon-1 {
-  color: #fff;
+  color:var(--color-white);
 }
 
 .section-left-text-1 {
   margin: 2rem 0 2rem 0;
-  font-size: 1.8rem;
+  font-size: var(--font-size-large);
 }
 
 .section-left-text-2 {
-  font-size: 1rem;
+  font-size: var(--font-size-medium);
   color: #0f0f0f;
 }
 .section-left-text-2 a {
@@ -275,12 +343,12 @@ section {
 .section-left-button {
   width: 100%;
   margin: 2rem 0 0.75rem 0;
-  padding: 15px 20px;
-  background-color: #5268ff;
-  color: #f1f1f1;
-  border-radius: 0.8rem;
+  padding: var(--padding-extra-large);
+  background-color: var(--color-blue);
+  color: var(--color-white-100);
+  border-radius: var(--border-radius-small);
   border: none;
-  font-size: 1.2rem;
+  font-size: var(--font-size-medium-wide);
 }
 
 .section-right-wrapper {
@@ -292,70 +360,70 @@ section {
   display: none;
 }
 .section-right-container h1 {
-  color: #f1f1f1;
-  font-size: 1.5rem;
+  color: var(--color-white-100);
+  font-size:var(--font-size-medium-wide);
 }
 .section-right-text-1 {
   width: 80%;
-  color: #f1f1f1;
-  font-size: 4rem;
+  color: var(--color-white-100);
+  font-size: var(--font-size-xlarge);
 }
 .right-text-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: var(--spacing-sm);
   margin: 1rem 0 1rem 0;
 }
 
 .right-text-container > p {
-  color: #f1f1f1ea;
-  font-size: 1rem;
-  font-weight: 600;
+  color: var(--color-white-200);
+  font-size: var(--font-size-medium);
+  font-weight: var(--font-weight-semibold);
   width: 80%;
 }
 
 .right-button-container {
   display: flex;
-  gap: 1rem;
+  gap: var(--spacing-sm);
 }
 .button-1 {
-  background-color: #5268ff;
-  color: #f1f1f1;
-  padding: 12px 28px;
-  border-radius: 0.6rem;
-  font-weight: 500;
-  font-size: 1rem;
+  background-color: var(--color-blue);
+  color: var(--color-white-100);
+  padding: var(--padding-regular-large);
+  border-radius: var(--border-radius-small);
+  font-weight: var(--font-weight-medium);
+  font-size: var(--font-size-medium);
   border: none;
   cursor: pointer;
-  transition: 0.3s all;
+  transition: var(--transition-fast);
 }
 .button-1:hover {
-  background-color: #3741d9;
+  background-color: var(--color-blue-100);
 }
 
 .button-2 {
   background: transparent;
-  border: 1px solid #f1f1f1;
-  border-radius: 0.6rem;
-  color: #f1f1f1;
-  padding: 12px 18px;
-  font-weight: 500;
-  font-size: 1rem;
-  transition: 0.3s all;
+  border: 1px solid var(--color-white-100);
+  border-radius: var(--border-radius-small);
+  color: var(--color-white-100);
+  padding: var(--padding-regular-large);
+  font-weight: var(--font-weight-medium);
+  font-size: var(--font-size-medium);
+  transition:var(--transition-fast);
   cursor: pointer;
 }
 
 .button-2:hover {
-  background-color: #3741d9;
-  border: 1px solid #3741d9;
+  background-color: var(--color-blue-100);
+  border: 1px solid var(--color-blue-100);
 }
 
 .button-3 {
   background: transparent;
-  color: #f1f1f1;
+  color: var(--color-white-100);
   border: none;
-  font-size: 1rem;
-  font-weight: 500;
+  font-size: var(--font-size-medium);
+  font-weight: var(--font-size-medium);
   text-decoration: underline;
 }
 
@@ -371,7 +439,7 @@ section {
   }
 
   .nav-desktop-menu-1 .dropdown:nth-last-of-type(1) {
-    padding: 14px 24px;
+    padding: var(--padding-large-horizontal);
     display: block;
   }
 
@@ -383,19 +451,16 @@ section {
   #section-left {
     width: 15rem;
   }
-    .button-1 {
-  padding: 10px 15px;
+  .button-1 {
+    padding: var(--padding-regular-medium);
+    font-size: 0.75rem;
+  }
 
-  font-size: 0.75rem;
-}
+  .button-2 {
+    padding:var(--padding-regular-medium);
 
-.button-2 {
-
-  padding: 10px 15px;
-
-  font-size: 0.75rem;
-
-}
+    font-size: 0.75rem;
+  }
 }
 
 @media (max-width: 768px) {
@@ -420,24 +485,24 @@ section {
   }
 
   #nav-mobile {
-    background-color: #ffff;
+    background-color: var(--color-white);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0.5rem 1rem;
+    padding: var(--padding-medium-wide);
   }
 
   .mobile-nav-menu {
-    background-color: #ffff;
+    background-color: var(--color-white);
     width: var(--fluid-width);
     min-width: 20rem;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 12px 18px;
+    box-shadow: 0px 8px 16px 0px var(--shadow-light);
+    padding:var(--padding-regular-large);
     z-index: 1;
-    border-radius: 0.8rem;
+    border-radius: var(--border-radius-small);
     margin-top: 1.3rem;
     z-index: 1;
-    transition: all 0.3s;
+    transition: var(--transition-fast);
     max-height: 80vh;
     overflow-y: auto;
   }
@@ -447,13 +512,13 @@ section {
     justify-content: space-between;
     align-items: center;
     z-index: 1;
-    font-size: 0.875rem;
+    font-size: var(--font-size-small);
     color: #353535;
     transition: 0.3s all;
   }
 
   .mobile-menu-content {
-    padding: 10px 12px;
+    padding: var(--padding-regular-horizontal);
   }
 
   .mobile-nav-menu-lists {
@@ -465,17 +530,17 @@ section {
   }
 
   .mobile-nav-menu-lists li {
-    font-size: 0.875rem;
-    padding: 10px 0px;
+    font-size: var(--font-size-small);
+    padding: var(--padding-regular);
   }
   .mobile-nav-menu-lists li a:hover {
-    color: #353535;
-    opacity: 0.7;
+    color:var(--color-black-100);
+    opacity: var(--opacity-medium);
   }
 
   .icon {
-    color: #0f0f0f;
-    font-size: 24px;
+    color: var(--color-black);
+    font-size: var(--font-size-medium-wide);
     margin-left: 0.8rem;
   }
 
@@ -486,7 +551,7 @@ section {
     height: 100%;
   }
   #section-left {
-    opacity: 0.85;
+    opacity: var(--opacity-high);
     /* z-index: -1; */
   }
 
