--- a/style.css
+++ b/style.css
@@ -419,7 +419,6 @@ section {
   font-weight: var(--font-weight-semibold);
 }
 
-#purposes,
 .content-options {
   display: flex;
   align-items: center;
@@ -427,10 +426,19 @@ section {
   flex-direction: column;
 }
 
+#purposes {
+  display: flex;
+  flex-direction: column;
+}
+
+.purposes-content-items {
+  text-align: center;
+}
+
 .content-options-items,
 .purposes-content-items {
   width: min-content;
-  /* gap: var(--spacing-sm); */
+
   margin: 20px 0;
   display: flex;
   justify-content: center;
@@ -446,7 +454,7 @@ section {
   font-weight: var(--font-weight-semibold);
   padding: 8px;
   border-right: 1px solid var(--color-white);
-    text-align: center;
+  text-align: center;
   width: 10rem;
 }
 
@@ -487,6 +495,84 @@ section {
 
 .content-options-inactive {
   display: none;
+}
+
+/* Switchin genel stili */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 24px;
+}
+
+/* Checkbox’ı gizle */
+.switch input {
+  display: none;
+}
+
+/* Slider (açma/kapama görünümü) */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 24px;
+}
+
+/* Slider içindeki yuvarlak */
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: var(--color-blue);
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.purposes-list-item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: var(--padding-small);
+  z-index: 1;
+}
+.purposes-list-item-content {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+}
+
+.purposes-list-item:hover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(53, 53, 53, 0.5); /* Saydam arka plan */
+  border-radius: var(--border-radius-sm);
+  z-index: -1;
+}
+
+.purposes-head{
+color: var(--color-white);
+font-size: var(--font-size-md);
 }
 @media (min-width: 768px) and (max-width: 992px) {
   .nav-desktop-menu {
