--- a/style.css
+++ b/style.css
@@ -101,7 +101,6 @@ body::after {
   background-repeat: no-repeat;
   opacity: var(--opacity-low);
   z-index: -1;
-
 }
 
 a {
@@ -151,7 +150,7 @@ ul {
   gap: var(--spacing-xs);
 }
 
-.nav-desktop-menu-1 p{
+.nav-desktop-menu-1 p {
   padding: var(--padding-large-left);
   font-size: var(--font-size-xs);
 }
@@ -234,7 +233,8 @@ ul {
   display: flex;
   left: -11rem;
   position: absolute;
-  width: 30rem;
+  width: 31rem;
+
 }
 
 .source-lists ul {
@@ -264,11 +264,10 @@ ul {
 .register {
   color: var(--color-white-100);
   background-color: var(--color-black-100);
-margin-right:8px ;
-margin-left: -16px;
+  margin-right: 8px;
+  margin-left: -16px;
   padding: var(--padding-small);
   border-radius: var(--border-radius-xs);
-  
 }
 
 section {
@@ -517,6 +516,7 @@ section {
   display: inline-block;
   width: 50px;
   height: 24px;
+
 }
 
 .switch input {
@@ -533,6 +533,7 @@ section {
   background-color: #ccc;
   transition: 0.4s;
   border-radius: 24px;
+
 }
 
 .slider:before {
@@ -562,7 +563,8 @@ input:checked + .slider:before {
   align-items: center;
   justify-content: space-between;
   padding: var(--padding-small);
-  z-index: 1;
+  cursor: pointer;
+
 }
 
 .sellers-list-item-content,
