--- a/style.css
+++ b/style.css
@@ -234,7 +234,6 @@ ul {
   left: -11rem;
   position: absolute;
   width: 31rem;
-
 }
 
 .source-lists ul {
@@ -516,7 +515,6 @@ section {
   display: inline-block;
   width: 50px;
   height: 24px;
-
 }
 
 .switch input {
@@ -533,7 +531,6 @@ section {
   background-color: #ccc;
   transition: 0.4s;
   border-radius: 24px;
-
 }
 
 .slider:before {
@@ -564,7 +561,6 @@ input:checked + .slider:before {
   justify-content: space-between;
   padding: var(--padding-small);
   cursor: pointer;
-
 }
 
 .sellers-list-item-content,
@@ -592,6 +588,33 @@ input:checked + .slider:before {
   margin-bottom: 10px;
   color: var(--color-white);
   font-size: var(--font-size-md);
+}
+
+.purposes-list-area {
+  position: relative;
+}
+
+.purposes-content-detail {
+  display: none;
+}
+
+.purposes-list-area.active .purposes-content-detail {
+  position: relative;
+  color: var(--color-white-100);
+  padding: var(--padding-small);
+  display: flex;
+}
+
+.purposes-list-area.active::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(53, 53, 53, 0.3);
+  border-radius: var(--border-radius-sm);
+  z-index: -1;
 }
 
 .sellers-right {
